gen/accessapproval/v1beta1/generator-errors.log
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
    Checking google-accessapproval1_beta1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/accessapproval/v1beta1/lib)
error[E0423]: expected value, found struct `approval_requests::ApprovalRequestsActions`
   --> gen/accessapproval/v1beta1/lib/src/lib.rs:626:13
    |
626 |             approval_requests::ApprovalRequestsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `approval_requests::ApprovalRequestsActions { /* fields */ }`?

error[E0423]: expected value, found struct `approval_requests::ApprovalRequestsActions`
    --> gen/accessapproval/v1beta1/lib/src/lib.rs:1668:13
     |
1668 |             approval_requests::ApprovalRequestsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `approval_requests::ApprovalRequestsActions { /* fields */ }`?

error[E0423]: expected value, found struct `approval_requests::ApprovalRequestsActions`
    --> gen/accessapproval/v1beta1/lib/src/lib.rs:2710:13
     |
2710 |             approval_requests::ApprovalRequestsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `approval_requests::ApprovalRequestsActions { /* fields */ }`?

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-accessapproval1_beta1`.

To learn more, run the command again with --verbose.
